// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormError renders correctly 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      email error
    </Text>
  </View>
  <View />
</View>
`;

exports[`Login renders correctly 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Log in to Hylo
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Your email address
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View />
    </View>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Password
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="go"
          secureTextEntry={true}
          selectTextOnFocus={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <Icon
          allowFontScaling={false}
          name="eye"
          onPress={[Function]}
          size={12}
        />
      </View>
    </View>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Log In
      </Text>
    </TouchableOpacity>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Or connect with:
    </Text>
  </View>
  <View>
    <FbLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
    <GoogleLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
  </View>
</ScrollViewMock>
`;

exports[`Login renders with email error 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Log in to Hylo
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Your email address
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View />
    </View>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Password
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="go"
          secureTextEntry={true}
          selectTextOnFocus={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <Icon
          allowFontScaling={false}
          name="eye"
          onPress={[Function]}
          size={12}
        />
      </View>
    </View>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Log In
      </Text>
    </TouchableOpacity>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Or connect with:
    </Text>
  </View>
  <View>
    <FbLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
    <GoogleLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
  </View>
</ScrollViewMock>
`;

exports[`Login renders with no network connection error 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Log in to Hylo
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Your email address
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View />
    </View>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Password
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="go"
          secureTextEntry={true}
          selectTextOnFocus={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <Icon
          allowFontScaling={false}
          name="eye"
          onPress={[Function]}
          size={12}
        />
      </View>
    </View>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Log In
      </Text>
    </TouchableOpacity>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Or connect with:
    </Text>
  </View>
  <View>
    <FbLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
    <GoogleLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
  </View>
</ScrollViewMock>
`;

exports[`Login renders with password error 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Log in to Hylo
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Your email address
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View />
    </View>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Password
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="go"
          secureTextEntry={true}
          selectTextOnFocus={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <Icon
          allowFontScaling={false}
          name="eye"
          onPress={[Function]}
          size={12}
        />
      </View>
    </View>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Log In
      </Text>
    </TouchableOpacity>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Or connect with:
    </Text>
  </View>
  <View>
    <FbLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
    <GoogleLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
  </View>
</ScrollViewMock>
`;

exports[`Login renders with pending banner 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Logging in ...
  </Text>
  <Image
    source={1}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Log in to Hylo
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Your email address
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View />
    </View>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Password
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="go"
          secureTextEntry={true}
          selectTextOnFocus={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <Icon
          allowFontScaling={false}
          name="eye"
          onPress={[Function]}
          size={12}
        />
      </View>
    </View>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Log In
      </Text>
    </TouchableOpacity>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Or connect with:
    </Text>
  </View>
  <View>
    <FbLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
    <GoogleLoginButton
      createErrorNotification={[Function]}
      onLoginFinished={undefined}
    />
  </View>
</ScrollViewMock>
`;
